@@ -11,12 +11,13 @@ doc/exampleconfig.txt
 doc/notes.txt
 doc/overview.txt
 doc/todo.txt
+HACKING
 lib/Brackup.pm
 lib/Brackup/Backup.pm
 lib/Brackup/BackupStats.pm
-lib/Brackup/ChunkIterator.pm
 lib/Brackup/Chunker/Default.pm
 lib/Brackup/Chunker/MP3.pm
+lib/Brackup/ChunkIterator.pm
 lib/Brackup/CompositeChunk.pm
 lib/Brackup/Config.pm
 lib/Brackup/ConfigSection.pm
@@ -28,8 +29,8 @@ lib/Brackup/Dict/SQLite.pm
 lib/Brackup/Dict/SQLite2.pm
 lib/Brackup/DigestCache.pm
 lib/Brackup/File.pm
-lib/Brackup/GPGProcManager.pm
 lib/Brackup/GPGProcess.pm
+lib/Brackup/GPGProcManager.pm
 lib/Brackup/InventoryDatabase.pm
 lib/Brackup/Manual/Overview.pod
 lib/Brackup/Metafile.pm
@@ -44,11 +45,11 @@ lib/Brackup/Target/CloudFiles.pm
 lib/Brackup/Target/Filebased.pm
 lib/Brackup/Target/Filesystem.pm
 lib/Brackup/Target/Ftp.pm
+lib/Brackup/Target/GoogleAppEngine.pm
 lib/Brackup/Target/Sftp.pm
 lib/Brackup/TargetBackupStatInfo.pm
 lib/Brackup/Test.pm
 lib/Brackup/Util.pm
-HACKING
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
@@ -64,16 +65,16 @@ t/04-gc-filesystem.t
 t/04-gc-ftp.t
 t/04-gc-sftp.t
 t/05-filename-escaping.t
-t/06-config-inheritance.t                                                                                               
-t/data/000-dup1.txt
-t/data/000-dup2.txt
-t/data/huge-file.txt
-t/data/my-link.txt
-t/data/my_dir/sub_dir/another-file.txt
-t/data/my_dir/sub_dir/program.sh
-t/data/pubring-test.gpg
-t/data/secring-test.gpg
-t/data/test-file.txt
+t/06-config-inheritance.t
+t/data-2/000-dup1.txt
+t/data-2/000-dup2.txt
+t/data-2/my-link.txt
+t/data-2/my_dir/sub_dir/another-file.txt
+t/data-2/my_dir/sub_dir/program.sh
+t/data-2/pubring-test.gpg
+t/data-2/README
+t/data-2/secring-test.gpg
+t/data-2/test-file.txt
 t/data-weird-filenames/000-dup1.txt
 t/data-weird-filenames/000-dup2.txt
 't/data-weird-filenames/filename whitespace'
@@ -83,6 +84,14 @@ t/data-weird-filenames/my-link.txt
 t/data-weird-filenames/pubring-test.gpg
 t/data-weird-filenames/secring-test.gpg
 t/data-weird-filenames/test-file.txt
+t/data/000-dup1.txt
+t/data/000-dup2.txt
+t/data/huge-file.txt
+t/data/my-link.txt
+t/data/my_dir/sub_dir/another-file.txt
+t/data/my_dir/sub_dir/program.sh
+t/data/pubring-test.gpg
+t/data/secring-test.gpg
+t/data/test-file.txt
 t/misc/brackup.conf
 TODO
-
